--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "typer>=0.12.0",
     "httpx>=0.27.0",
+    "rich>=13.7.0",
 ]
 
 [project.scripts]
