--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = "Tools and server for managing Android phone as a tiny home server
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.115.0",
-    "uvicorn>=0.32.0",
-    "psutil>=6.1.0",
+    "fastapi==0.109.2",
+    "uvicorn[standard]==0.27.1",
+    "psutil>=6.0.0",
     "python-dotenv>=1.0.0",
-    "typer>=0.12.0",
-    "httpx>=0.27.0",
+    "typer>=0.9.0",
+    "httpx>=0.26.0",
     "rich>=13.7.0",
 ]
 
@@ -18,15 +18,15 @@ dependencies = [
 droidvm-tools = "droidvm_tools.cli:app"
 start-server = "droidvm_tools.server:start"
 
+[dependency-groups]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=8.3.0",
-    "pytest-asyncio>=0.24.0",
-]
 
 [tool.hatchling.build.targets.wheel]
 packages = ["src/droidvm_tools"]
