--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = "Tools and server for managing Android phone as a tiny home server
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi==0.109.2",
-    "uvicorn[standard]==0.27.1",
-    "psutil>=6.0.0",
+    "fastapi==0.104.1",
+    "pydantic==2.4.2",
+    "uvicorn==0.24.0",
+    "psutil>=5.9.0",
     "python-dotenv>=1.0.0",
     "typer>=0.9.0",
-    "httpx>=0.26.0",
-    "rich>=13.7.0",
+    "httpx>=0.25.0",
+    "rich>=13.0.0",
 ]
 
 [project.scripts]
