--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Tools and server for managing Android phone as a tiny home server
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi==0.104.1",
-    "pydantic==2.4.2",
-    "uvicorn==0.24.0",
+    "fastapi==0.103.2",
+    "pydantic>=1.10.0,<2.0.0",
+    "uvicorn==0.23.2",
     "psutil>=5.9.0",
     "python-dotenv>=1.0.0",
     "typer>=0.9.0",
-    "httpx>=0.25.0",
+    "httpx>=0.24.0",
     "rich>=13.0.0",
 ]
 
